Move SDK Connections to open api

--- a/packages/back-end/src/api/openapi/schemas/_index.yml
+++ b/packages/back-end/src/api/openapi/schemas/_index.yml
@@ -22,3 +22,5 @@ FeatureRolloutRule:
   $ref: './FeatureRolloutRule.yml'
 FeatureExperimentRule:
   $ref: './FeatureExperimentRule.yml'
+SdkConnection:
+  $ref: './SdkConnection.yml'
