Add experiments to open api

--- a/packages/back-end/src/api/openapi/schemas/_index.yml
+++ b/packages/back-end/src/api/openapi/schemas/_index.yml
@@ -24,3 +24,11 @@ FeatureExperimentRule:
   $ref: './FeatureExperimentRule.yml'
 SdkConnection:
   $ref: './SdkConnection.yml'
+Experiment:
+  $ref: './Experiment.yml'
+ExperimentMetric:
+  $ref: './ExperimentMetric.yml'
+ExperimentAnalysisSettings:
+  $ref: './ExperimentAnalysisSettings.yml'
+ExperimentResults:
+  $ref: './ExperimentResults.yml'
