--- a/packages/back-end/src/api/openapi/schemas/_index.yml
+++ b/packages/back-end/src/api/openapi/schemas/_index.yml
@@ -32,3 +32,5 @@ ExperimentAnalysisSettings:
   $ref: './ExperimentAnalysisSettings.yml'
 ExperimentResults:
   $ref: './ExperimentResults.yml'
+DataSource:
+  $ref: './DataSource.yml'
