--- a/packages/back-end/src/api/openapi/paths/experiments.yaml
+++ b/packages/back-end/src/api/openapi/paths/experiments.yaml
@@ -29,8 +29,12 @@ listExperiments:
       - experiments
     parameters:
     - $ref: "../parameters.yaml#/limit"
-    - $ref: "../parameters.yaml#/offset"
-    - $ref: "../parameters.yaml#/experimentId"
+    - $ref: "../parameters.yaml#/offset" 
+    - name: experimentId
+      in: query
+      description: Filter the returned list by the experiment tracking key (id)
+      schema:
+        type: string
     operationId: listExperiments
     x-codeSamples:
       - lang: 'cURL'
