--- a/packages/back-end/src/api/openapi/paths/listDataSources.yaml
+++ b/packages/back-end/src/api/openapi/paths/listDataSources.yaml
@@ -5,6 +5,7 @@ get:
   parameters:
   - $ref: "../parameters.yaml#/limit"
   - $ref: "../parameters.yaml#/offset"
+  - $ref: "../parameters.yaml#/projectId"
   operationId: listDataSources
   x-codeSamples:
     - lang: 'cURL'
