--- a/packages/back-end/src/api/openapi/paths/listDimensions.yaml
+++ b/packages/back-end/src/api/openapi/paths/listDimensions.yaml
@@ -5,6 +5,7 @@ get:
   parameters:
   - $ref: "../parameters.yaml#/limit"
   - $ref: "../parameters.yaml#/offset"
+  - $ref: "../parameters.yaml#/datasourceId"
   operationId: listDimensions
   x-codeSamples:
     - lang: 'cURL'
