--- a/packages/back-end/src/api/openapi/paths/listExperiments.yaml
+++ b/packages/back-end/src/api/openapi/paths/listExperiments.yaml
@@ -5,6 +5,8 @@ get:
   parameters:
   - $ref: "../parameters.yaml#/limit"
   - $ref: "../parameters.yaml#/offset" 
+  - $ref: "../parameters.yaml#/projectId"
+  - $ref: "../parameters.yaml#/datasourceId"
   - name: experimentId
     in: query
     description: Filter the returned list by the experiment tracking key (id)
