--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -55,8 +55,8 @@
     "jwks-rsa": "^1.8.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
-    "mongodb": "^3.7.3",
-    "mongoose": "^5.13.13",
+    "mongodb": "4.14.0",
+    "mongoose": "6.10.0",
     "mssql": "^9.0.1",
     "mysql2": "^2.3.0",
     "node-fetch": "^2.6.1",
