--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -50,6 +50,7 @@
     "markdown-it-sanitizer": "^0.4.3",
     "md5": "^2.3.0",
     "next": "12.3.1",
+    "rc-collapse": "^3.5.2",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-beautiful-dnd": "^13.1.0",
