Restructure urls; Improve docs

--- a/packages/back-end/src/api/openapi/paths/listVisualChangesets.yaml
+++ b/packages/back-end/src/api/openapi/paths/listVisualChangesets.yaml
@@ -1,15 +1,20 @@
 get:
-  summary: Get all visual changeset
+  summary: Get all visual changesets
   tags:
     - visual-changesets
   parameters:
-  - $ref: "../parameters.yaml#/limit"
-  - $ref: "../parameters.yaml#/offset"
+    - id:
+      name: id
+      in: path
+      required: true
+      description: The experiment id the visual changesets belong to
+      schema:
+        type: string
   operationId: listVisualChangesets
   x-codeSamples:
-    - lang: 'cURL'
+    - lang: "cURL"
       source: |
-        curl https://api.growthbook.io/api/v1/visual-changesets \
+        curl https://api.growthbook.io/api/v1/experiments/exp_123abc/visual-changesets \
           -u secret_abc123DEF456:
   responses:
     "200":
@@ -25,4 +30,3 @@ get:
                     type: array
                     items:
                       $ref: "../schemas/VisualChangeset.yaml"
-              - $ref: "../schemas/PaginationFields.yaml"
