--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -55,6 +55,7 @@
     "react-ace": "^10.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap-typeahead": "^6.0.0-rc.3",
+    "react-collapsible": "^2.10.0",
     "react-colorful": "^5.3.0",
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^18.2.0",
