Add targeting conditions to experiment phases
TODO:
- [x] Model and controller changes
- [ ] Display in Phase list on experiment page
- [ ] Ability to edit condition and namespace in Phase modals
- [ ] Ability to specify the released variation id in the StopExperiment modal
- [ ] Ability to view and set the hashAttribute for the experiment

--- a/packages/back-end/src/api/openapi/schemas/Experiment.yaml
+++ b/packages/back-end/src/api/openapi/schemas/Experiment.yaml
@@ -128,6 +128,7 @@ properties:
     required:
       - status
       - winner
+      - releasedVariationId
       - conclusions
     properties:
       status:
@@ -135,4 +136,6 @@ properties:
       winner:
         type: string
       conclusions:
+        type: string
+      releasedVariationId:
         type: string
