Move hashAttribute to top-level.  Add seed to phase object

--- a/packages/back-end/src/api/openapi/schemas/Experiment.yaml
+++ b/packages/back-end/src/api/openapi/schemas/Experiment.yaml
@@ -7,6 +7,7 @@ required:
   - project
   - hypothesis
   - description
+  - hashAttribute
   - tags
   - owner
   - archived
@@ -44,6 +45,8 @@ properties:
     type: string
   autoRefresh:
     type: boolean
+  hashAttribute:
+    type: string
   variations:
     type: array
     items:
